--- a/home/m47h4r/.config/kitty/kitty.conf
+++ b/home/m47h4r/.config/kitty/kitty.conf
@@ -465,11 +465,12 @@ inactive_tab_font_style normal
 #: Color scheme {{{
 
 foreground #EBDBB2
-background #282828
+# background #282828
+background #000000
 
 #: The foreground and background colors
 
-# background_opacity 1.0
+background_opacity 0.7
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
