--- a/home/m47h4r/.config/nvim/coc-settings.json
+++ b/home/m47h4r/.config/nvim/coc-settings.json
@@ -2,5 +2,7 @@
   "tailwindCSS.headwind.runOnSave": false,
   "list.normalMappings": {
     "v": "action:vsplit"
-  }
+  },
+  "Lua.telemetry.enable": false,
+  "Lua.diagnostics.globals": ["vim"]
 }
