--- a/home/m47h4r/.config/kitty/kitty.conf
+++ b/home/m47h4r/.config/kitty/kitty.conf
@@ -464,13 +464,13 @@ inactive_tab_font_style normal
 
 #: Color scheme {{{
 
-foreground #EBDBB2
-# background #282828
+foreground #ABB2BF
+# background #282C34
 background #000000
 
 #: The foreground and background colors
 
-background_opacity 0.75
+background_opacity 0.90
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -513,43 +513,43 @@ selection_background #EBDBB2
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-color0 #282828
-color8 #1D2021
+color0 #282C34
+color8 #4a4f58
 
 #: black
 
-color1 #CC241D
-color9 #FB4934
+color1 #E06C75
+color9 #ff9ca2
 
 #: red
 
-color2  #98971A
-color10 #B8BB26
+color2  #98C379
+color10 #c0ec9f
 
 #: green
 
-color3  #D79921
-color11 #FABD2F
+color3  #E5C07B
+color11 #ffd993
 
 #: yellow
 
-color4  #458588
-color12 #83A598
+color4  #61AFEF
+color12 #70bcfd
 
 #: blue
 
-color5  #B16286
-color13 #D3869B
+color5  #C678DD
+color13 #e796fe
 
 #: magenta
 
-color6  #689D6A
-color14 #8EC07C
+color6  #56B6C2
+color14 #87e5f2
 
 #: cyan
 
-color7  #A89984
-color15 #EBDBB2
+color7  #ABB2BF
+color15 #d6ddea
 
 #: white
 
