--- a/home/m47h4r/.tmux.conf
+++ b/home/m47h4r/.tmux.conf
@@ -1,4 +1,5 @@
-set -ga terminal-overrides ",xterm-256color*:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm*:Tc"
 
 # change default prefix
 unbind C-b
@@ -6,7 +7,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # customize tmux status line
-set -g status-style 'bg=#282828 fg=#EBDBB2'
+set -g status-style 'bg=#282C34 fg=#ABB2BF'
+set -g status-right ''
 set-window-option -g window-status-current-style fg=red # active window
 
 # reload tmux config
