feat(update): before mint migration

--- a/home/m47h4r/.tmux.conf
+++ b/home/m47h4r/.tmux.conf
@@ -21,7 +21,7 @@ set -g base-index 1
 set -s escape-time 0
 
 # disable mouse
-set -g mouse off
+set -g mouse on
 # enable vim-like shortcuts
 set-window-option -g mode-keys vi
 
