--- a/home/m47h4r/.config/kitty/kitty.conf
+++ b/home/m47h4r/.config/kitty/kitty.conf
@@ -465,12 +465,11 @@ inactive_tab_font_style normal
 #: Color scheme {{{
 
 foreground #ABB2BF
-# background #282C34
-background #000000
+background #282C34
 
 #: The foreground and background colors
 
-background_opacity 0.90
+# background_opacity 0.90
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
