feat(update): nvim-lsp, telescope, gruvbox, lualine

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family     Fira Code
+font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -464,8 +464,8 @@ inactive_tab_font_style normal
 
 #: Color scheme {{{
 
-foreground #ABB2BF
-background #282C34
+foreground #fbf1c7
+background #282828
 
 #: The foreground and background colors
 
@@ -503,7 +503,7 @@ selection_foreground #282828
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-selection_background #EBDBB2
+selection_background #fbf1c7
 
 #: The background for text selected with the mouse.
 
@@ -512,43 +512,43 @@ selection_background #EBDBB2
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-color0 #282C34
-color8 #4a4f58
+color0 #282828
+color8 #1d2021
 
 #: black
 
-color1 #E06C75
-color9 #ff9ca2
+color1 #cc241d
+color9 #fb4934
 
 #: red
 
-color2  #98C379
-color10 #c0ec9f
+color2  #98971a
+color10 #b8bb26
 
 #: green
 
-color3  #E5C07B
-color11 #ffd993
+color3  #d79921
+color11 #fabd2f
 
 #: yellow
 
-color4  #61AFEF
-color12 #70bcfd
+color4  #458588
+color12 #83a598
 
 #: blue
 
-color5  #C678DD
-color13 #e796fe
+color5  #b16286
+color13 #d3869b
 
 #: magenta
 
-color6  #56B6C2
-color14 #87e5f2
+color6  #689d6a
+color14 #8ec07c
 
 #: cyan
 
-color7  #ABB2BF
-color15 #d6ddea
+color7  #fbf1c7
+color15 #f9f5d7
 
 #: white
 
