--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,10 +6,17 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# customize tmux status line
-set -g status-style 'bg=#282C34 fg=#ABB2BF'
+# customize status line
+set -g status-style 'bg=#3c3836 fg=#a89984'
+# disabling far right
 set -g status-right ''
-set-window-option -g window-status-current-style fg=red # active window
+# session name (far left)
+set  -g status-left ' #S '
+# inactive window
+setw -g window-status-format '  #I #W#F  '
+# active window
+setw -g window-status-current-format '#[bg=#a89984 fg=#3c3836,bold] #I #W#F #[bg=#3c3836 fg=#a89984]'
+# set-window-option -g window-status-separator '#[bg=#3c3836 fg=#3c3836] '
 
 # reload tmux config
 bind r source-file ~/.tmux.conf
@@ -32,8 +39,19 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+# go to last active window
+bind -n 'M-6' last-window
+
+# enter select mode
+bind -n 'M-q' copy-mode
+# use v to trigger selection in select mode
+bind -T copy-mode-vi v send-keys -X begin-selection
 # vim-like copy in select mode
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
+
+# Navigate windows
+bind -n 'M-]' next-window
+bind -n 'M-[' previous-window
 
 # custom scripts
 bind-key -r i run-shell "tmux neww ~/bin/cht.sh"
