--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -29,7 +29,7 @@ separator_block_width=40
 markup=none
 
 [song]
-label=♬ 
+label=𝅘𝅥𝅮 
 command=/home/m47h4r/.config/i3/i3blocks-scripts/current-song
 interval=20
 signal=11
