--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -46,6 +46,7 @@ shadow-offset-y = -9;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
+  "class_g = 'kitty'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
@@ -409,9 +410,9 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
+  tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = true; opacity = 0.9; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 0.9; }
+  dropdown_menu = { opacity = 0.9; }
 };
