--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # customize status line
-set -g status-style 'bg=#3c3836 fg=#a89984'
+# default for bg makes it transparent
+set -g status-style 'bg=default fg=#a89984'
 # disabling far right
 set -g status-right ''
 # session name (far left)
@@ -15,7 +16,7 @@ set  -g status-left ' #S '
 # inactive window
 setw -g window-status-format '  #I #W#F  '
 # active window
-setw -g window-status-current-format '#[bg=#a89984 fg=#3c3836,bold] #I #W#F #[bg=#3c3836 fg=#a89984]'
+setw -g window-status-current-format '#[bg=default fg=#a89984]#[bg=#a89984 fg=#3c3836,bold] #I #W#F #[bg=default fg=#a89984]'
 # set-window-option -g window-status-separator '#[bg=#3c3836 fg=#3c3836] '
 
 # reload tmux config
