--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -6,6 +6,7 @@
   <family>sans-serif</family>
   <prefer>
    <family>Vazirmatn</family>
+   <family>Noto Color Emoji</family>
   </prefer>
  </alias>
 
@@ -13,6 +14,7 @@
   <family>serif</family>
   <prefer>
    <family>Noto Serif</family>
+   <family>Noto Color Emoji</family>
   </prefer>
  </alias>
 
@@ -20,6 +22,7 @@
   <family>monospace</family>
   <prefer>
    <family>Noto Sans Mono</family>
+   <family>Noto Color Emoji</family>
   </prefer>
  </alias>
 
