--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -469,7 +469,7 @@ background #282828
 
 #: The foreground and background colors
 
-# background_opacity 0.90
+background_opacity 0.90
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
