feat(i3): use cmus for music player instead

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -28,6 +28,26 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=40
 markup=none
 
+[keyindicator]
+label=
+command=/home/m47h4r/.config/i3/i3blocks-scripts/keyindicator
+KEY=CAPS
+markup=pango
+interval=once
+signal=11
+COLOR_ON=#cc241d
+HIDE_WHEN_OFF=1
+
+[keyindicator]
+label=
+command=/home/m47h4r/.config/i3/i3blocks-scripts/keyindicator
+KEY=NUM
+markup=pango
+interval=once
+signal=11
+COLOR_ON=#cc241d
+HIDE_WHEN_OFF=1
+
 [song]
 label=𝅘𝅥𝅮 
 command=/home/m47h4r/.config/i3/i3blocks-scripts/current-song
@@ -61,12 +81,6 @@ label=
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/memory
 interval=10
-
-#[uptime]
-#label= 
-#color=#dadada
-#command=/home/m47h4r/.config/i3/uptime
-#interval=10
 
 [battery]
 label= 
