--- a/.config/i3/config
+++ b/.config/i3/config
@@ -181,7 +181,8 @@ bar {
 	# modifier $mod
 
 	colors {
-		background $bg
+		# set transparency in picom
+		background #282828
 		statusline $bg
 		separator $ac
 		#<color class>		<border>  <background>  <text>
@@ -216,32 +217,31 @@ bindsym $mod+Mod1+shift+h exec ~/bin/huion-buttons
 bindsym $mod+i exec ~/bin/kb_layout
 # lock
 bindsym $mod+semicolon exec ~/bin/lock
-# control vlc with keyboard
-bindsym $mod+Mod1+period exec playerctl --player=cmus next; exec pkill -SIGRTMIN+11 i3blocks
-bindsym $mod+Mod1+comma exec playerctl --player=cmus previous; exec pkill -SIGRTMIN+11 i3blocks
+# control cmus with keyboard
+# using playerctl for next & prev acts slow (i guess) and the signal won't update i3blocks
+bindsym $mod+Mod1+period exec cmus-remote --next; exec pkill -SIGRTMIN+11 i3blocks
+bindsym $mod+Mod1+comma exec cmus-remote --prev; exec pkill -SIGRTMIN+11 i3blocks
 bindsym $mod+Mod1+j exec playerctl --player=cmus play-pause; exec pkill -SIGRTMIN+11 i3blocks
 bindsym $mod+Mod1+bracketleft exec playerctl --player=cmus position 10-
 bindsym $mod+Mod1+bracketright exec playerctl --player=cmus position 10+
 # open rofi with mouse thumb button
 bindsym --whole-window --border $mod+Tab exec rofi -show window
 # program shortcuts
-bindsym $mod+c exec exec google-chrome-stable
+bindsym $mod+c exec google-chrome-stable
 bindsym $mod+Mod1+f exec nautilus
 bindsym $mod+Mod1+t exec telegram-desktop
 bindsym $mod+Mod1+s exec slack
 bindsym $mod+Mod1+m exec ~/bin/vlc-player
-# player seek forward/backward
-bindsym $mod+Mod1+Ctrl+Left exec playerctl position 10-
-bindsym $mod+Mod1+Ctrl+Right exec playerctl position 10+
 bindsym $mod+Mod1+c exec ~/bin/clocks
 # dunst
 bindsym $mod+Ctrl+space exec dunstctl close
 bindsym $mod+Ctrl+Shift+space exec dunstctl history-pop
+bindsym $mod+Ctrl+Return exec dunstctl action
 
 # needed for i3blocks for capslock and numlock
 # handled by xfce
-#bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-#bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
 # autostart programs
 exec ~/bin/rw.sh
