feat(update): customize some colors

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -74,7 +74,7 @@ adjust_line_height  2
 
 #: Cursor customization {{{
 
-cursor #FE8019
+cursor #d79921
 
 #: Default cursor color
 
@@ -157,7 +157,7 @@ wheel_scroll_multiplier 3.0
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-url_color #FE8019
+url_color #d79921
 url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
@@ -357,16 +357,16 @@ placement_strategy center
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-active_border_color #FE8019
+active_border_color #d79921
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-inactive_border_color #4a4f58
+inactive_border_color #fbf1c7
 
 #: The color for the border of inactive windows
 
-bell_border_color #E06C75
+bell_border_color #cc241d
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred
@@ -451,11 +451,11 @@ tab_switch_strategy previous
 #: goto_tab N.
 
 active_tab_foreground   #282828
-active_tab_background   #FE8019
+active_tab_background   #d79921
 # active_tab_font_style   bold-italic
 active_tab_font_style   normal
-inactive_tab_foreground #EBDBB2
-inactive_tab_background #282828
+inactive_tab_foreground #282828
+inactive_tab_background #fbf1c7
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
@@ -503,7 +503,7 @@ selection_foreground #282828
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-selection_background #fbf1c7
+selection_background #d79921
 
 #: The background for text selected with the mouse.
 
