--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,22 +3,22 @@ set $mod Mod4
 
 # set colors
 set $bg #282828e6
-set $fg #dadada
-set $ac #D4B483
+set $fg #fbf1c7
+set $ac #d79921
+set $red #cc241d
 
 # set the font
 font pango:FiraCode Nerd Font 12
 
 floating_modifier $mod
 
-# start a terminal ( termianl key binding )
+# start a terminal
 bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+q kill
 
-# start dmenu ( launcher )
-#bindsym $mod+d exec dmenu_run -b -i -fn 'Monospace-13' -nb '#1a1a1a' -sb '#5c5fd7' -nf '#dadada' -sf '#1a1a1a' -p '$'
+# rofi
 bindsym $mod+d exec rofi -show drun
 bindsym $mod+w exec rofi -show window
 #bindsym $mod+r exec rofi -show ssh
@@ -30,22 +30,22 @@ bindsym $mod+k focus up
 bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
+bindsym $mod+Left  focus left
+bindsym $mod+Down  focus down
+bindsym $mod+Up    focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Shift+h move left  20 px
+bindsym $mod+Shift+j move down  20 px
+bindsym $mod+Shift+k move up    20 px
+bindsym $mod+Shift+l move right 20 px
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+Left  move left  20 px
+bindsym $mod+Shift+Down  move down  20 px
+bindsym $mod+Shift+Up    move up    20 px
+bindsym $mod+Shift+Right move right 20 px
 
 # split in horizontal orientation
 bindsym $mod+b split h
@@ -61,8 +61,9 @@ bindsym $mod+s layout stacking
 bindsym $mod+t layout tabbed
 bindsym $mod+g layout toggle split
 
-# toggle tiling / floating
+# toggle floating & sticky windows
 bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+s sticky toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
@@ -77,8 +78,8 @@ bindsym $mod+z focus child
 focus_follows_mouse yes 
 
 # border style
-#new_window pixel 2
-new_window normal 2
+new_window pixel 2
+# new_window normal 2
 
 # hide alone-window borders
 hide_edge_borders smart
@@ -89,16 +90,16 @@ hide_edge_borders smart
 
 
 # define workspaces
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws1  "1: "
+set $ws2  "2: "
+set $ws3  "3: "
+set $ws4  "4: "
+set $ws5  "5: "
+set $ws6  "6"
+set $ws7  "7"
+set $ws8  "8"
+set $ws9  "9:神 "
+set $ws10 "10: "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -111,6 +112,9 @@ bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
+# go to next/prev ws
+bindsym $mod+bracketleft  workspace prev
+bindsym $mod+bracketright workspace next
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -125,16 +129,24 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 # move focused container to workspace and go there
-bindsym $mod+Ctrl+1 move container to workspace $ws1; workspace $ws1
-bindsym $mod+Ctrl+2 move container to workspace $ws2; workspace $ws2
-bindsym $mod+Ctrl+3 move container to workspace $ws3; workspace $ws3
-bindsym $mod+Ctrl+4 move container to workspace $ws4; workspace $ws4
-bindsym $mod+Ctrl+5 move container to workspace $ws5; workspace $ws5
-bindsym $mod+Ctrl+6 move container to workspace $ws6; workspace $ws6
-bindsym $mod+Ctrl+7 move container to workspace $ws7; workspace $ws7
-bindsym $mod+Ctrl+8 move container to workspace $ws8; workspace $ws8
-bindsym $mod+Ctrl+9 move container to workspace $ws9; workspace $ws9
+bindsym $mod+Ctrl+1 move container to workspace $ws1;  workspace $ws1
+bindsym $mod+Ctrl+2 move container to workspace $ws2;  workspace $ws2
+bindsym $mod+Ctrl+3 move container to workspace $ws3;  workspace $ws3
+bindsym $mod+Ctrl+4 move container to workspace $ws4;  workspace $ws4
+bindsym $mod+Ctrl+5 move container to workspace $ws5;  workspace $ws5
+bindsym $mod+Ctrl+6 move container to workspace $ws6;  workspace $ws6
+bindsym $mod+Ctrl+7 move container to workspace $ws7;  workspace $ws7
+bindsym $mod+Ctrl+8 move container to workspace $ws8;  workspace $ws8
+bindsym $mod+Ctrl+9 move container to workspace $ws9;  workspace $ws9
 bindsym $mod+Ctrl+0 move container to workspace $ws10; workspace $ws10
+
+# make sure certain window classes are in certain wss
+assign [class="Google-chrome"] $ws2
+assign [class="Slack"] $ws3
+assign [class="TelegramDesktop"] $ws4
+assign [class="qBittorrent"] $ws5
+assign [class="Gnome-pomodoro"] $ws9
+for_window [title="cmus"] move to workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -146,52 +158,52 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'Exit?' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window ( you can also use the mouse for that )
-bindsym $mod+Control+h resize shrink width 1 px or 1 ppt
-bindsym $mod+Control+j resize grow height 1 px or 1 ppt
-bindsym $mod+Control+k resize shrink height 1 px or 1 ppt
-bindsym $mod+Control+l resize grow width 1 px or 1 ppt
+bindsym $mod+Control+h resize shrink width  20 px or 20 ppt
+bindsym $mod+Control+j resize grow   height 20 px or 20 ppt
+bindsym $mod+Control+k resize shrink height 20 px or 20 ppt
+bindsym $mod+Control+l resize grow   width  20 px or 20 ppt
 
 # alternative resize using arrow keys
-bindsym $mod+Control+Left resize shrink width 1 px or 1 ppt
-bindsym $mod+Control+Down resize grow height 1 px or 1 ppt
-bindsym $mod+Control+Up resize shrink height 1 px or 1 ppt
-bindsym $mod+Control+Right resize grow width 1 px or 1 ppt
+bindsym $mod+Control+Left  resize shrink width  20 px or 20 ppt
+bindsym $mod+Control+Down  resize grow   height 20 px or 20 ppt
+bindsym $mod+Control+Up    resize shrink height 20 px or 20 ppt
+bindsym $mod+Control+Right resize grow   width  20 px or 20 ppt
 
 # colors
 # class                 border  backgr. text    indicator child_border
-client.focused          $ac $ac $bg $bg   $ac
-client.focused_inactive $ac $bg $fg $bg   $bg
-client.unfocused        $bg $bg $fg $bg   $bg
-client.urgent           $bg $bg $bg #ff0000   #ff0000
-client.placeholder      $bg $bg $bg $bg   $bg
+client.focused          $ac     $ac     $bg     $bg       $ac
+client.focused_inactive $ac     $bg     $ac     $bg       $bg
+client.unfocused        $bg     $bg     $fg     $bg       $bg
+client.urgent           $bg     $bg     $bg     $red      $red
+client.placeholder      $bg     $bg     $bg     $bg       $bg
 client.background       $bg
 
 # ------------------------------------------------------
 # i3bar
 # ------------------------------------------------------
 bar {
-	status_command i3blocks -c ~/.config/i3/i3blocks.conf
-	position bottom
-	tray_output primary
-	tray_padding 2
-	font pango:FiraCode Nerd Font 12
-	separator_symbol " │ "
-	# mode hide
-	# hidden_state hide
-	# modifier $mod
-
-	colors {
-		# set transparency in picom
-		background #282828
-		statusline $bg
-		separator $ac
-		#<color class>		<border>  <background>  <text>
-		focused_workspace	$ac		$ac		$bg
-		active_workspace	$ac		$bg		$ac
-		inactive_workspace	$bg		$bg		$ac
-		urgent_workspace	#ff0000		#ff0000		$bg
-		binding_mode		$ac		$ac		$bg
-	}
+  status_command i3blocks -c ~/.config/i3/i3blocks.conf
+  position bottom
+  tray_output primary
+  tray_padding 2
+  font pango:FiraCode Nerd Font 12
+  separator_symbol " │ "
+  # mode hide
+  # hidden_state hide
+  # modifier $mod
+  
+  colors {
+    # set transparency in picom
+    background #282828
+    statusline $bg
+    separator  $ac
+    #<color class>     <border> <background> <text>
+    focused_workspace  $ac      $ac          $bg
+    active_workspace   $ac      $bg          $ac
+    inactive_workspace $bg      $bg          $ac
+    urgent_workspace   $red     $red         $bg
+    binding_mode       $ac      $ac          $bg
+  }
 }
 
 # key bindings
@@ -233,7 +245,7 @@ bindsym $mod+c exec google-chrome-stable
 bindsym $mod+Mod1+f exec nautilus
 bindsym $mod+Mod1+t exec telegram-desktop
 bindsym $mod+Mod1+s exec slack
-bindsym $mod+Mod1+m exec ~/bin/vlc-player
+bindsym $mod+Mod1+m exec kitty cmus
 bindsym $mod+Mod1+c exec ~/bin/clocks
 # dunst
 bindsym $mod+Ctrl+space exec dunstctl close
