--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -49,7 +49,7 @@ COLOR_ON=#cc241d
 HIDE_WHEN_OFF=1
 
 [song]
-label=  
+label= 
 command=/home/m47h4r/.config/i3/i3blocks-scripts/current-song
 interval=20
 signal=11
@@ -58,44 +58,50 @@ color=#dadada
 # this needs xkb-switch-git from AUR
 [keymap]
 color=#dadada
-label=  
+label= 
 command=bash -c 'xkb-switch;xkb-switch -W'
 interval=persist
 
 [backlight]
-label=  
+label= 
 command=/home/m47h4r/.config/i3/i3blocks-scripts/backlight
 color=#dadada
 signal=11
 interval=5
 
 [volume]
-label=  
+label= 
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/volume
 interval=5
 signal=11
 
+[cpu]
+label= 
+color=#dadada
+command=/home/m47h4r/.config/i3/i3blocks-scripts/cpu
+interval=10
+
 [memory]
-label=  
+label= 
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/memory
 interval=10
 
-[battery]
-label=  
-color=#dadada
-command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
-interval=30
+# [battery]
+# label=  
+# color=#dadada
+# command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
+# interval=30
 
 [date]
+# label=  
 command=date '+%Y %a, %b %d'
-label=  
 color=#dadada
 interval=5
 
 [time]
-label=  
+# label=  
 command=date '+%H:%M'
 interval=5
 color=#dadada
