--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -362,7 +362,7 @@ active_border_color #d79921
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-inactive_border_color #fbf1c7
+inactive_border_color #282828
 
 #: The color for the border of inactive windows
 
@@ -465,11 +465,12 @@ inactive_tab_font_style normal
 #: Color scheme {{{
 
 foreground #fbf1c7
-background #282828
+# background #282828
+background #000000
 
 #: The foreground and background colors
 
-background_opacity 0.90
+background_opacity 0.80
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
