--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,11 @@ set -g status-style 'bg=default fg=#a89984'
 set -g status-right ''
 # session name (far left)
 set  -g status-left ' #S '
+set  -g status-left-style 'fg=#d79921 bold'
 # inactive window
 setw -g window-status-format '  #I #W#F  '
 # active window
-setw -g window-status-current-format '#[bg=default fg=#a89984]#[bg=#a89984 fg=#3c3836,bold] #I #W#F #[bg=default fg=#a89984]'
+setw -g window-status-current-format '#[bg=#d79921 fg=#3c3836,bold] #I #W#F '
 # set-window-option -g window-status-separator '#[bg=#3c3836 fg=#3c3836] '
 
 # reload tmux config
@@ -51,8 +52,8 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
 
 # Navigate windows
-bind -n 'M-]' next-window
-bind -n 'M-[' previous-window
+bind -n 'M-.' next-window
+bind -n 'M-,' previous-window
 
 # custom scripts
 bind-key -r i run-shell "tmux neww ~/bin/cht.sh"
