--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -88,11 +88,11 @@ color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/memory
 interval=10
 
-# [battery]
-# label=  
-# color=#dadada
-# command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
-# interval=30
+[battery]
+label=  
+color=#dadada
+command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
+interval=30
 
 [date]
 # label=  
