--- a/.gitignore
+++ b/.gitignore
@@ -21,16 +21,11 @@
 .config/spotify/
 .config/vlc/
 .config/trizen/
-.config/cmus/autosave
-.config/cmus/cache
-.config/cmus/command-history
-.config/cmus/lib.pl
-.config/cmus/search-history
-.config/cmus/search-history
-.config/cmus/playlists/
 .config/gedit/
 .config/xournalpp/
 .config/nvim/plugin/
 .config/sqlitebrowser/
 .config/calibre/
+.config/systemd/
+.config/htop/
 bin/ghcup
