feat(update): better snippets with choice node

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -77,10 +77,10 @@ interval=5
 signal=11
 
 [cpu]
-label= 
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/cpu
 interval=10
+markup=pango
 
 [memory]
 label= 
