--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,7 @@ bind -n 'M-^' last-window
 
 # enter select mode
 bind -n 'M-q' copy-mode
+bind -n 'M-w' choose-tree
 # use v to trigger selection in select mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 # vim-like copy in select mode
