--- a/.config/i3/config
+++ b/.config/i3/config
@@ -92,8 +92,9 @@ for_window [title="ncmpc"]                 mark m
 ################################################################################
 # Auto assignments
 ################################################################################
-for_window [class="Pavucontrol"]     floating enable
-for_window [class="mpv"]             floating enable
+for_window [class="Pavucontrol"]      floating enable
+for_window [class="mpv"]              floating enable
+for_window [class="gnome-calculator"] floating enable
 
 ################################################################################
 # Workspaces
@@ -236,8 +237,9 @@ bindsym $mod+Mod1+bracketright exec mpc seek +10
 # open rofi with mouse thumb button
 bindsym --whole-window --border $mod+Tab exec rofi -show window
 
+# find profiles in ~/.cache/google-chrome
 bindsym $mod+c      exec google-chrome-stable --profile-directory=Default
-bindsym $mod+Mod1+c exec google-chrome-stable --profile-directory='Profile 2'
+bindsym $mod+Mod1+c exec google-chrome-stable --profile-directory='Profile 1'
 bindsym $mod+Mod1+f exec nautilus
 bindsym $mod+Mod1+t exec telegram-desktop
 bindsym $mod+Mod1+s exec slack
