--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,7 @@ bind -n 'M-9' select-window -t 9
 bind -n 'M-^' last-window
 
 # enter select mode
-bind -n 'M-q' copy-mode
+bind -n 'M-c' copy-mode
 bind -n 'M-w' choose-tree
 # use v to trigger selection in select mode
 bind -T copy-mode-vi v send-keys -X begin-selection
