feat(update): add mime types

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -98,7 +98,13 @@ interval=30
 # label=  
 command=date '+%Y %a, %b %d'
 color=#dadada
-interval=5
+interval=60
+
+[jdate]
+# label=  
+command=/home/m47h4r/.config/i3/i3blocks-scripts/jdate
+color=#dadada
+interval=60
 
 [time]
 # label=  
